; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_get_cert_display_name.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_get_cert_display_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CERT_FRIENDLY_NAME_PROP_ID = common dso_local global i32 0, align 4
@CERT_NAME_SIMPLE_DISPLAY_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_cert_display_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_cert_display_name(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @CERT_FRIENDLY_NAME_PROP_ID, align 4
  %6 = call i32* @get_cert_property_as_string(i32 %4, i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @CERT_NAME_SIMPLE_DISPLAY_TYPE, align 4
  %12 = call i32* @get_cert_name_string(i32 %10, i32 %11, i32 0)
  store i32* %12, i32** %3, align 8
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @get_cert_property_as_string(i32, i32) #1

declare dso_local i32* @get_cert_name_string(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
